<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_presentations"
        android:enabled="true"
        android:icon="@drawable/ic_presentation"
        android:title="@string/bottom_nav_presentations"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/bottom_nav_chat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_logout"
        android:title="@string/bottom_nav_logout"
        app:showAsAction="ifRoom" />
</menu>